tests/fixtures/invalid/dict_lshift_int.py
# Cannot left shift Dict[str, int] and Int
x: dict[str, int] = {"a": 1} << 1
